correct contrast

--- a/style.css
+++ b/style.css
@@ -1060,3 +1060,8 @@ h4 {
 .black {
   color: black !important;
 }
+.white {
+    color: white !important;
+    background-color: rgba(0, 0, 0, 0.556);
+  }
+  
